--- a/todo-list/src/main/resources/application.properties
+++ b/todo-list/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring-jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
