--- a/todo-list-ui/package.json
+++ b/todo-list-ui/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
